Atributos de las etiquetas, agregamos logos de las herramientas del curso

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World 🌎</h1>
+    <h1>Curso esencial de HTML y CSS</h1>
+    <p>
+      Este es el inicio de tu carrera como Desarrollador Web, empezarás
+      aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
+      aprenderás de componentes y en 3 sobre layouts.
+    </p>
+    <img
+      src="/images/googleChrome.png"
+      alt="Logo del navegador Web Google Chromes"
+      title="Logo de Google Chrome"
+    />
+    <img
+      src="/images/vsCode.png"
+      alt="Logo de editor de código Visual Studio Code"
+      title="Logo de Visual Studio Code"
+    />
+    <img src="/images/figma.png" alt="Logo de Figma" title="Logo de Figma" />
+    <img src="/images/gitHub.png" alt="Logo de GitHub" title="Logo de GitHub" />
   </body>
 </html>
