--- a/index.html
+++ b/index.html
@@ -4,26 +4,190 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Blog de Ron</title>
   </head>
   <body>
+    <nav>
+      <p>Setup</p>
+      <ol>
+        <li>Google Chrome</li>
+        <li>Visual Studio Code</li>
+        <li>Figma</li>
+        <li>GitHub</li>
+      </ol>
+      <p>Conceptos esenciales del Desarrollo Web</p>
+      <ol>
+        <li>Qué es HTML</li>
+        <li>Etiquetas</li>
+        <li>DOM</li>
+        <li>Semántica</li>
+        <li>Atributos</li>
+        <li>Qué es CSS</li>
+      </ol>
+    </nav>
     <h1>Curso esencial de HTML y CSS</h1>
     <p>
       Este es el inicio de tu carrera como Desarrollador Web, empezarás
       aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
       aprenderás de componentes y en 3 sobre layouts.
     </p>
-    <img
-      src="/images/googleChrome.png"
-      alt="Logo del navegador Web Google Chromes"
-      title="Logo de Google Chrome"
-    />
-    <img
-      src="/images/vsCode.png"
-      alt="Logo de editor de código Visual Studio Code"
-      title="Logo de Visual Studio Code"
-    />
-    <img src="/images/figma.png" alt="Logo de Figma" title="Logo de Figma" />
-    <img src="/images/gitHub.png" alt="Logo de GitHub" title="Logo de GitHub" />
+    <h2>Setup</h2>
+    <ol>
+      <img
+        src="/images/googleChrome.png"
+        alt="Logo del navegador Web Google Chromes"
+        title="Logo de Google Chrome"
+      />
+      <li><h3>Google Chrome</h3></li>
+      <p>
+        Chrome va a ser el navegador que utilizaremos en el curso por su extenso
+        soporte de nuevos estándares y herramientas de desarrollo avanzadas y de
+        amigable uso.
+      </p>
+      <img
+        src="/images/vsCode.png"
+        alt="Logo de editor de código Visual Studio Code"
+        title="Logo de Visual Studio Code"
+      />
+      <li><h3>Visual Studio Code</h3></li>
+      <p>
+        Visual Studio Code es el editor de texto más popular y potente del
+        mercado actualmente, su fácil uso y la capacidad de extenderlo por medio
+        de plugins lo hace el complemento perfecto para cualquier programador
+        sin importar el lenguaje en el que se desemvuelva.
+      </p>
+      <img src="/images/figma.png" alt="Logo de Figma" title="Logo de Figma" />
+      <li><h3>Figma</h3></li>
+      <p>
+        Figma es una la herramienta más popular en la actualidad para entregar
+        diseños a los desarrolladores para su implementación por su fácil uso
+        porque puede ser usado directamente desde el navegador.
+      </p>
+      <img
+        src="/images/gitHub.png"
+        alt="Logo de GitHub"
+        title="Logo de GitHub"
+      />
+      <li><h3>GitHub</h3></li>
+      <p>
+        Así como en Facebook te encuentran tus amigos, en Github te encuentran
+        otras programadoras y programadores de todo el mundo, en vez de subir
+        fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open
+        source” o guardarlo de manera privada, Github será esencial para
+        almacenar tu futuro portafolio.
+      </p>
+    </ol>
+    <h2>“Este es el inicio de tu carrera como Desarrollador Web”</h2>
+    <h3>Leonidas Esteban</h3>
+    <h2>Conceptos esenciales del Desarrollo Web</h2>
+    <ol>
+      <li><h3>Qué es HTML</h3></li>
+      <p>
+        Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el
+        componente más básico de la web. Define el significado y la estructura
+        del contenido.
+      </p>
+      <img
+        src="/images/html.png"
+        alt="Estructura de contenido de HTML"
+        title="Estructura del contemido HTML"
+      />
+      <li><h3>Etiquetas</h3></li>
+      <p>
+        Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica
+        al contenido de nuestro website y cada una tiene características y usos
+        diferentes aunque visualmente den un resultado similar.
+      </p>
+      <p>
+        Muchas etiquetas son fácil de diferencias como los headings o las
+        imágenes y otras diferentes como header, footer, section o div, aquí es
+        donde la semántica será la respuesta y si sabemos un poco de inglés
+        también podremos darnos una pequeña idea de su uso pero en este curso
+        vamos a usar las más importantes y que serán parte de tu día a día como
+        Software Developer.
+      </p>
+      <li><h3>DOM</h3></li>
+      <p>
+        El Document Object Model es una estructura de árbol que representará
+        todos nuestros proyectos web como si un árbol genealógico fuera: padres,
+        hijos, hermanos con niveles infinitos. cuando entendemos esta anidación
+        podemos identificar dependencias, herencias en css y que tan complejo es
+        nuestro proyecto.
+      </p>
+      <img
+        src="/images/dom.png"
+        alt="Estructura de arbol de cualquier proyeto Web"
+        title="Estructura de arbol de un proyecto Web"
+      />
+      <li><h3>Sémantica</h3></li>
+      <p>
+        La semántica le brinda sentido a cada elemento existen en un sitio web,
+        algunos elementos será meramente decorativos y no deben significar nada
+        pero otros serán títulos y deberán estar en diferente jerarquías o
+        alguna secciones serán más relevantes que otras, esto ayudará a los
+        motores de búsqueda como Google o Duck Duck Go a diferenciar tu
+        contenido, categorizar y será la herramientas más valiosa para estar en
+        los primeros resultados de búsqueda SEO. También ayudará a la
+        accesibilidad de tu sitio web, para que personas con habilidades
+        diferentes puedan entender cada contenido.
+      </p>
+      <li><h3>Atributos</h3></li>
+      <p>
+        Los atributos le dan características extra a las etiquetas para
+        complementar información y son pre programadas por el navegador, algunos
+        atributos funcionan en todas las etiquetas de la misma forma como
+        ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src
+      </p>
+      <li><h3>CSS</h3></li>
+      <p>
+        Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es
+        el lenguaje de estilos utilizado para describir la presentación de
+        documentos HTML
+      </p>
+      <img
+        src="/images/css.png"
+        alt="Logo y estructura de una hona de estilos de CSS"
+        title="Logo y estructura de una hona de estilos de CSS"
+      />
+    </ol>
+    <h2>Modelo de caja</h2>
+    <h3>El modelo de caja está compuesto por:</h3>
+    <p>
+      Chrome va a ser el navegador que utilizaremos en el curso por su extenso
+      soporte de nuevos estándares y herramientas de desarrollo avanzadas y de
+      amigable uso.
+    </p>
+    <ol>
+      <li>Tamaño del contido /ancho y alto</li>
+      <li>Padding / Relleno</li>
+      <li>Border / Bordes</li>
+      <li>Margin / Márgenes</li>
+    </ol>
+    <h3>Propiedades físicas para el modelo de caja:</h3>
+    <ul>
+      <li>width / height</li>
+      <li>margin / margin-top | margin-right | margin-bottom | margin-left</li>
+      <li>border / border-top | border-right | border-bottom | border-left</li>
+      <li>
+        padding / padding-top | padding-right | padding-bottom | padding-left
+      </li>
+    </ul>
+    <h3>Propiedades lógicas para el modelo de caja:</h3>
+    <ul>
+      <li>inline-size / block-size</li>
+      <li>
+        margin-block | margin-inline | margin-block-start | margin-block-end |
+        margin-inline-start | margin-inline-end
+      </li>
+      <li>
+        border-block | border-inline | border-block-start | border-block-end |
+        border-inline-start | border-inline-end
+      </li>
+      <li>
+        padding-block | padding-inline | padding-block-start | padding-block-end
+        | padding-inline-start | padding-inline-end
+      </li>
+    </ul>
+    <h3>Modelo de caja</h3>
   </body>
 </html>
