Enlaces y rutas de nuestro blog

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <nav>
       <p>Setup</p>
       <ol>
-        <li>Google Chrome</li>
-        <li>Visual Studio Code</li>
-        <li>Figma</li>
-        <li>GitHub</li>
+        <a href="#googleChorme"><li>Google Chrome</li></a>
+        <a href="#vsc"><li>Visual Studio Code</li></a>
+        <a href="#figma"><li>Figma</li></a>
+        <a href="#gitHub"><li>GitHub</li></a>
       </ol>
       <p>Conceptos esenciales del Desarrollo Web</p>
       <ol>
-        <li>Qué es HTML</li>
-        <li>Etiquetas</li>
-        <li>DOM</li>
-        <li>Semántica</li>
-        <li>Atributos</li>
-        <li>Qué es CSS</li>
+        <a href="#html"><li>Qué es HTML</li></a>
+        <a href="#etiquetas"><li>Etiquetas</li></a>
+        <a href="#dom"><li>DOM</li></a>
+        <a href="#semantica"><li>Semántica</li></a>
+        <a href="#atributos"><li>Atributos</li></a>
+        <a href="#css"><li>Qué es CSS</li></a>
       </ol>
     </nav>
     <h1>Curso esencial de HTML y CSS</h1>
@@ -37,6 +37,7 @@
         src="/images/googleChrome.png"
         alt="Logo del navegador Web Google Chromes"
         title="Logo de Google Chrome"
+        id="googleChorme"
       />
       <li><h3>Google Chrome</h3></li>
       <p>
@@ -48,6 +49,7 @@
         src="/images/vsCode.png"
         alt="Logo de editor de código Visual Studio Code"
         title="Logo de Visual Studio Code"
+        id="vsc"
       />
       <li><h3>Visual Studio Code</h3></li>
       <p>
@@ -56,7 +58,12 @@
         de plugins lo hace el complemento perfecto para cualquier programador
         sin importar el lenguaje en el que se desemvuelva.
       </p>
-      <img src="/images/figma.png" alt="Logo de Figma" title="Logo de Figma" />
+      <img
+        src="/images/figma.png"
+        alt="Logo de Figma"
+        title="Logo de Figma"
+        id="figma"
+      />
       <li><h3>Figma</h3></li>
       <p>
         Figma es una la herramienta más popular en la actualidad para entregar
@@ -67,6 +74,7 @@
         src="/images/gitHub.png"
         alt="Logo de GitHub"
         title="Logo de GitHub"
+        id="gitHub"
       />
       <li><h3>GitHub</h3></li>
       <p>
@@ -81,7 +89,7 @@
     <h3>Leonidas Esteban</h3>
     <h2>Conceptos esenciales del Desarrollo Web</h2>
     <ol>
-      <li><h3>Qué es HTML</h3></li>
+      <li id="html"><h3>Qué es HTML</h3></li>
       <p>
         Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el
         componente más básico de la web. Define el significado y la estructura
@@ -92,7 +100,7 @@
         alt="Estructura de contenido de HTML"
         title="Estructura del contemido HTML"
       />
-      <li><h3>Etiquetas</h3></li>
+      <li id="etiquetas"><h3>Etiquetas</h3></li>
       <p>
         Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica
         al contenido de nuestro website y cada una tiene características y usos
@@ -106,7 +114,7 @@
         vamos a usar las más importantes y que serán parte de tu día a día como
         Software Developer.
       </p>
-      <li><h3>DOM</h3></li>
+      <li id="dom"><h3>DOM</h3></li>
       <p>
         El Document Object Model es una estructura de árbol que representará
         todos nuestros proyectos web como si un árbol genealógico fuera: padres,
@@ -119,7 +127,7 @@
         alt="Estructura de arbol de cualquier proyeto Web"
         title="Estructura de arbol de un proyecto Web"
       />
-      <li><h3>Sémantica</h3></li>
+      <li id="semantica"><h3>Sémantica</h3></li>
       <p>
         La semántica le brinda sentido a cada elemento existen en un sitio web,
         algunos elementos será meramente decorativos y no deben significar nada
@@ -131,14 +139,14 @@
         accesibilidad de tu sitio web, para que personas con habilidades
         diferentes puedan entender cada contenido.
       </p>
-      <li><h3>Atributos</h3></li>
+      <li id="atributos"><h3>Atributos</h3></li>
       <p>
         Los atributos le dan características extra a las etiquetas para
         complementar información y son pre programadas por el navegador, algunos
         atributos funcionan en todas las etiquetas de la misma forma como
         ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src
       </p>
-      <li><h3>CSS</h3></li>
+      <li id="css"><h3>CSS</h3></li>
       <p>
         Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es
         el lenguaje de estilos utilizado para describir la presentación de
