Menu desplegable con details, summary y algo de js

--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
   </head>
   <body>
     <nav>
-      <p>Setup</p>
-      <ol>
-        <a href="#googleChorme"><li>Google Chrome</li></a>
-        <a href="#vsc"><li>Visual Studio Code</li></a>
-        <a href="#figma"><li>Figma</li></a>
-        <a href="#gitHub"><li>GitHub</li></a>
-      </ol>
-      <p>Conceptos esenciales del Desarrollo Web</p>
-      <ol>
-        <a href="#html"><li>Qué es HTML</li></a>
-        <a href="#etiquetas"><li>Etiquetas</li></a>
-        <a href="#dom"><li>DOM</li></a>
-        <a href="#semantica"><li>Semántica</li></a>
-        <a href="#atributos"><li>Atributos</li></a>
-        <a href="#css"><li>Qué es CSS</li></a>
-      </ol>
+      <details open>
+        <summary>Setup</summary>
+        <ol>
+          <a href="#googleChorme"><li>Google Chrome</li></a>
+          <a href="#vsc"><li>Visual Studio Code</li></a>
+          <a href="#figma"><li>Figma</li></a>
+          <a href="#gitHub"><li>GitHub</li></a>
+        </ol>
+      </details>
+      <details>
+        <summary>Conceptos esenciales del Desarrollo Web</summary>
+        <ol>
+          <a href="#html"><li>Qué es HTML</li></a>
+          <a href="#etiquetas"><li>Etiquetas</li></a>
+          <a href="#dom"><li>DOM</li></a>
+          <a href="#semantica"><li>Semántica</li></a>
+          <a href="#atributos"><li>Atributos</li></a>
+          <a href="#css"><li>Qué es CSS</li></a>
+        </ol>
+      </details>
     </nav>
     <h1>Curso esencial de HTML y CSS</h1>
     <p>
@@ -197,5 +201,17 @@
       </li>
     </ul>
     <h3>Modelo de caja</h3>
+
+    <script>
+      const $detailsList = document.querySelectorAll("details");
+      $detailsList.forEach(($details) => {
+        $details.querySelector("summary").addEventListener("click", expand);
+      });
+      function expand() {
+        $detailsList.forEach(($details) => {
+          $details.removeAttribute("open");
+        });
+      }
+    </script>
   </body>
 </html>
