Agregamos codigo en nuestra Web  con la etiqueta pre, escapando el codigo

--- a/index.html
+++ b/index.html
@@ -99,11 +99,21 @@
         componente más básico de la web. Define el significado y la estructura
         del contenido.
       </p>
-      <img
-        src="/images/html.png"
-        alt="Estructura de contenido de HTML"
-        title="Estructura del contemido HTML"
-      />
+      <pre>
+          <!-- a esto se le llama escapar el código -->
+&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;es&quot;&gt;
+&lt;head&gt;
+    &lt;meta charset=&quot;UTF-8&quot;&gt;
+    &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+    &lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    
+&lt;/body&gt;
+&lt;/html&gt;
+      </pre>
       <li id="etiquetas"><h3>Etiquetas</h3></li>
       <p>
         Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica
