Pseudo clases, hay varias pero de ejemplo esta root y hover

--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
     <title>Blog de Ron</title>
   </head>
   <body>
-    <nav>
-      <details open>
-        <summary>Setup</summary>
-        <ol>
-          <a href="#googleChorme"><li>Google Chrome</li></a>
-          <a href="#vsc"><li>Visual Studio Code</li></a>
-          <a href="#figma"><li>Figma</li></a>
-          <a href="#gitHub"><li>GitHub</li></a>
-        </ol>
-      </details>
-      <details>
-        <summary>Conceptos esenciales del Desarrollo Web</summary>
-        <ol>
-          <a href="#html"><li>Qué es HTML</li></a>
-          <a href="#etiquetas"><li>Etiquetas</li></a>
-          <a href="#dom"><li>DOM</li></a>
-          <a href="#semantica"><li>Semántica</li></a>
-          <a href="#atributos"><li>Atributos</li></a>
-          <a href="#css"><li>Qué es CSS</li></a>
-        </ol>
-      </details>
-    </nav>
+    <header>
+      <nav>
+        <details open>
+          <summary>Setup</summary>
+          <ol>
+            <a href="#googleChorme"><li>Google Chrome</li></a>
+            <a href="#vsc"><li>Visual Studio Code</li></a>
+            <a href="#figma"><li>Figma</li></a>
+            <a href="#gitHub"><li>GitHub</li></a>
+          </ol>
+        </details>
+        <details>
+          <summary>Conceptos esenciales del Desarrollo Web</summary>
+          <ol>
+            <a href="#html"><li>Qué es HTML</li></a>
+            <a href="#etiquetas"><li>Etiquetas</li></a>
+            <a href="#dom"><li>DOM</li></a>
+            <a href="#semantica"><li>Semántica</li></a>
+            <a href="#atributos"><li>Atributos</li></a>
+            <a href="#css"><li>Qué es CSS</li></a>
+          </ol>
+        </details>
+      </nav>
+    </header>
     <h1>Curso esencial de HTML y CSS</h1>
     <p>
       Este es el inicio de tu carrera como Desarrollador Web, empezarás
