Background-image agregando degradado, que repita,posición y tamaño

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Blog de Ron</title>
   </head>
   <body>
+    <div class="place"></div>
     <header>
       <nav>
         <details open>
