--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
       aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
       aprenderás de componentes y en 3 sobre layouts.
     </p>
-    <h2>Setup</h2>
-    <ol>
+    <div class="setup">
+      <h2>Setup</h2>
       <img
         src="/images/googleChrome.png"
         alt="Logo del navegador Web Google Chromes"
         title="Logo de Google Chrome"
         id="googleChorme"
       />
-      <li><h3>Google Chrome</h3></li>
+      <h3>Google Chrome</h3>
       <p>
         Chrome va a ser el navegador que utilizaremos en el curso por su extenso
         soporte de nuevos estándares y herramientas de desarrollo avanzadas y de
@@ -64,7 +64,7 @@
         title="Logo de Visual Studio Code"
         id="vsc"
       />
-      <li><h3>Visual Studio Code</h3></li>
+      <h3>Visual Studio Code</h3>
       <p>
         Visual Studio Code es el editor de texto más popular y potente del
         mercado actualmente, su fácil uso y la capacidad de extenderlo por medio
@@ -77,7 +77,7 @@
         title="Logo de Figma"
         id="figma"
       />
-      <li><h3>Figma</h3></li>
+      <h3>Figma</h3>
       <p>
         Figma es una la herramienta más popular en la actualidad para entregar
         diseños a los desarrolladores para su implementación por su fácil uso
@@ -89,7 +89,7 @@
         title="Logo de GitHub"
         id="gitHub"
       />
-      <li><h3>GitHub</h3></li>
+      <h3>GitHub</h3>
       <p>
         Así como en Facebook te encuentran tus amigos, en Github te encuentran
         otras programadoras y programadores de todo el mundo, en vez de subir
@@ -97,33 +97,33 @@
         source” o guardarlo de manera privada, Github será esencial para
         almacenar tu futuro portafolio.
       </p>
-    </ol>
+    </div>
     <h2>“Este es el inicio de tu carrera como Desarrollador Web”</h2>
     <h3>Leonidas Esteban</h3>
-    <h2>Conceptos esenciales del Desarrollo Web</h2>
-    <ol>
-      <li id="html"><h3>Qué es HTML</h3></li>
+    <div class="conceptos">
+      <h2>Conceptos esenciales del Desarrollo Web</h2>
+      <h3>Qué es HTML</h3>
       <p>
         Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el
         componente más básico de la web. Define el significado y la estructura
         del contenido.
       </p>
       <pre>
-          <!-- a esto se le llama escapar el código -->
-&lt;!DOCTYPE html&gt;
-&lt;html lang=&quot;es&quot;&gt;
-&lt;head&gt;
-    &lt;meta charset=&quot;UTF-8&quot;&gt;
-    &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
-    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
-    &lt;title&gt;Document&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    
-&lt;/body&gt;
-&lt;/html&gt;
-      </pre>
-      <li id="etiquetas"><h3>Etiquetas</h3></li>
+            <!-- a esto se le llama escapar el código -->
+      !DOCTYPE html&gt;
+      html lang=&quot;es&quot;&gt;
+      head&gt;
+      &lt;meta charset=&quot;UTF-8&quot;&gt;
+      &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+      &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+      &lt;title&gt;Document&lt;/title&gt;
+      /head&gt;
+      body&gt;
+      
+      /body&gt;
+      /html&gt;
+        </pre>
+      <h3>Etiquetas</h3>
       <p>
         Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica
         al contenido de nuestro website y cada una tiene características y usos
@@ -137,7 +137,7 @@
         vamos a usar las más importantes y que serán parte de tu día a día como
         Software Developer.
       </p>
-      <li id="dom"><h3>DOM</h3></li>
+      <h3>DOM</h3>
       <p>
         El Document Object Model es una estructura de árbol que representará
         todos nuestros proyectos web como si un árbol genealógico fuera: padres,
@@ -150,7 +150,7 @@
         alt="Estructura de arbol de cualquier proyeto Web"
         title="Estructura de arbol de un proyecto Web"
       />
-      <li id="semantica"><h3>Sémantica</h3></li>
+      <h3>Sémantica</h3>
       <p>
         La semántica le brinda sentido a cada elemento existen en un sitio web,
         algunos elementos será meramente decorativos y no deben significar nada
@@ -162,14 +162,14 @@
         accesibilidad de tu sitio web, para que personas con habilidades
         diferentes puedan entender cada contenido.
       </p>
-      <li id="atributos"><h3>Atributos</h3></li>
+      <h3>Atributos</h3>
       <p>
         Los atributos le dan características extra a las etiquetas para
         complementar información y son pre programadas por el navegador, algunos
         atributos funcionan en todas las etiquetas de la misma forma como
         ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src
       </p>
-      <li id="css"><h3>CSS</h3></li>
+      <h3>CSS</h3>
       <p>
         Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es
         el lenguaje de estilos utilizado para describir la presentación de
@@ -180,7 +180,7 @@
         alt="Logo y estructura de una hona de estilos de CSS"
         title="Logo y estructura de una hona de estilos de CSS"
       />
-    </ol>
+    </div>
     <h2>Modelo de caja</h2>
     <h3>El modelo de caja está compuesto por:</h3>
     <p>
