--- a/index.html
+++ b/index.html
@@ -110,21 +110,22 @@
           componente más básico de la web. Define el significado y la estructura
           del contenido.
         </p>
+        <!-- a esto se le llama escapar el código -->
         <pre>
-              <!-- a esto se le llama escapar el código -->
-        !DOCTYPE html&gt;
-        html lang=&quot;es&quot;&gt;
-        head&gt;
-        &lt;meta charset=&quot;UTF-8&quot;&gt;
-        &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
-        &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
-        &lt;title&gt;Document&lt;/title&gt;
-        /head&gt;
-        body&gt;
-        
-        /body&gt;
-        /html&gt;
-          </pre>
+!DOCTYPE html&gt;
+html lang=&quot;es&quot;&gt;
+head&gt;
+&lt;meta charset=&quot;UTF-8&quot;&gt;
+&lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
+&lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+&lt;title&gt;Document&lt;/title&gt;
+/head&gt;
+body&gt;
+
+/body&gt;
+/html&gt;
+</pre
+        >
         <h3>Etiquetas</h3>
         <p>
           Las etiquetas HTML van a ayudarnos a brindar una estructura y
