Márgenes, line-heigth, font-weigth, :first-oftype

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
         aprenderás de componentes y en 3 sobre layouts.
       </p>
-      <section class="setup">
+      <hr />
+      <section class="seccion setup">
         <h2>Setup</h2>
         <img
           src="/images/googleChrome.png"
@@ -98,11 +99,13 @@
           source” o guardarlo de manera privada, Github será esencial para
           almacenar tu futuro portafolio.
         </p>
+        <blockquote>
+          <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
+          <p>-Leonidas Esteban</p>
+        </blockquote>
       </section>
       <hr />
-      <h2>“Este es el inicio de tu carrera como Desarrollador Web”</h2>
-      <h3>Leonidas Esteban</h3>
-      <section class="conceptos">
+      <section class="seccion conceptos">
         <h2>Conceptos esenciales del Desarrollo Web</h2>
         <h3>Qué es HTML</h3>
         <p>
@@ -185,7 +188,7 @@ body&gt;
           title="Logo y estructura de una hona de estilos de CSS"
         />
       </section>
-      <section class="modeloDeCaja">
+      <section class="seccion modeloDeCaja">
         <h2>Modelo de caja</h2>
         <h3>El modelo de caja está compuesto por:</h3>
         <p>
