Margin collapsing --> solo funciona en verticarl y en bloque, toma el margen mas alto

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="place"></div>
     <header>
       <nav>
+        <p>CONTENIDO</p>
         <details open>
           <summary>Setup</summary>
           <ol>
