Padding o relleno y poniendo el color que corresponde a cada fuente

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </p>
         <blockquote>
           <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
-          <p>-Leonidas Esteban</p>
+          <p>Leonidas Esteban</p>
         </blockquote>
       </section>
       <hr />
@@ -114,8 +114,8 @@
           componente más básico de la web. Define el significado y la estructura
           del contenido.
         </p>
+        <!-- a esto se le llama escapar el código -->
         <pre>
-              <!-- a esto se le llama escapar el código -->
 !DOCTYPE html&gt;
 html lang=&quot;es&quot;&gt;
 head&gt;
@@ -128,7 +128,8 @@ body&gt;
 
 /body&gt;
 /html&gt;
-          </pre>
+</pre
+        >
         <h3>Etiquetas</h3>
         <p>
           Las etiquetas HTML van a ayudarnos a brindar una estructura y
