Tecnica para depurar mi css la class debug

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </nav>
     </header>
     <main>
+      <!-- <h1 class="debug">Curso esencial de HTML y CSS</h1> -->
       <h1>Curso esencial de HTML y CSS</h1>
       <p>
         Este es el inicio de tu carrera como Desarrollador Web, empezarás
