Rutas relativas en el link de la hoja de estilos e imágenes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -61,7 +61,7 @@
           <section class="seccion setup">
             <h2>Setup</h2>
             <img
-              src="/images/googleChrome.png"
+              src="./images/googleChrome.png"
               alt="Logo del navegador Web Google Chromes"
               title="Logo de Google Chrome"
               id="googleChorme"
@@ -73,7 +73,7 @@
               avanzadas y de amigable uso.
             </p>
             <img
-              src="/images/vsCode.png"
+              src="./images/vsCode.png"
               alt="Logo de editor de código Visual Studio Code"
               title="Logo de Visual Studio Code"
               id="vsc"
@@ -86,7 +86,7 @@
               programador sin importar el lenguaje en el que se desemvuelva.
             </p>
             <img
-              src="/images/figma.png"
+              src="./images/figma.png"
               alt="Logo de Figma"
               title="Logo de Figma"
               id="figma"
@@ -99,7 +99,7 @@
               navegador.
             </p>
             <img
-              src="/images/gitHub.png"
+              src="./images/gitHub.png"
               alt="Logo de GitHub"
               title="Logo de GitHub"
               id="gitHub"
@@ -166,7 +166,7 @@
               herencias en css y que tan complejo es nuestro proyecto.
             </p>
             <img
-              src="/images/dom.png"
+              src="./images/dom.png"
               alt="Estructura de arbol de cualquier proyeto Web"
               title="Estructura de arbol de un proyecto Web"
             />
@@ -198,7 +198,7 @@
               presentación de documentos HTML
             </p>
             <img
-              src="/images/css.png"
+              src="./images/css.png"
               alt="Logo y estructura de una hona de estilos de CSS"
               title="Logo y estructura de una hona de estilos de CSS"
             />
