Rutas relativas para mostrar las imagenes en produccion

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section class="setup">
         <h2>Setup</h2>
         <img
-          src="/images/googleChrome.png"
+          src="./images/googleChrome.png"
           alt="Logo del navegador Web Google Chromes"
           title="Logo de Google Chrome"
           id="googleChorme"
@@ -60,7 +60,7 @@
           avanzadas y de amigable uso.
         </p>
         <img
-          src="/images/vsCode.png"
+          src="./images/vsCode.png"
           alt="Logo de editor de código Visual Studio Code"
           title="Logo de Visual Studio Code"
           id="vsc"
@@ -73,7 +73,7 @@
           programador sin importar el lenguaje en el que se desemvuelva.
         </p>
         <img
-          src="/images/figma.png"
+          src="./images/figma.png"
           alt="Logo de Figma"
           title="Logo de Figma"
           id="figma"
@@ -85,7 +85,7 @@
           porque puede ser usado directamente desde el navegador.
         </p>
         <img
-          src="/images/gitHub.png"
+          src="./images/gitHub.png"
           alt="Logo de GitHub"
           title="Logo de GitHub"
           id="gitHub"
@@ -150,7 +150,7 @@ body&gt;
           complejo es nuestro proyecto.
         </p>
         <img
-          src="/images/dom.png"
+          src="./images/dom.png"
           alt="Estructura de arbol de cualquier proyeto Web"
           title="Estructura de arbol de un proyecto Web"
         />
@@ -181,7 +181,7 @@ body&gt;
           documentos HTML
         </p>
         <img
-          src="/images/css.png"
+          src="./images/css.png"
           alt="Logo y estructura de una hona de estilos de CSS"
           title="Logo y estructura de una hona de estilos de CSS"
         />
