Skin de medium-2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -16,6 +16,7 @@
     <div class="place"></div>
     <header>
       <nav>
+        <p>CONTENIDO</p>
         <details open>
           <summary>Setup</summary>
           <ol>
@@ -45,7 +46,8 @@
         aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
         aprenderás de componentes y en 3 sobre layouts.
       </p>
-      <section class="setup">
+      <hr />
+      <section class="seccion setup">
         <h2>Setup</h2>
         <img
           src="./images/googleChrome.png"
@@ -98,11 +100,13 @@
           source” o guardarlo de manera privada, Github será esencial para
           almacenar tu futuro portafolio.
         </p>
+        <blockquote>
+          <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
+          <p>Leonidas Esteban</p>
+        </blockquote>
       </section>
       <hr />
-      <h2>“Este es el inicio de tu carrera como Desarrollador Web”</h2>
-      <h3>Leonidas Esteban</h3>
-      <section class="conceptos">
+      <section class="seccion conceptos">
         <h2>Conceptos esenciales del Desarrollo Web</h2>
         <h3>Qué es HTML</h3>
         <p>
