Margenes con valores y propiedades Lógicas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -100,15 +100,15 @@
           source” o guardarlo de manera privada, Github será esencial para
           almacenar tu futuro portafolio.
         </p>
-        <blockquote>
-          <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
-          <p>Leonidas Esteban</p>
-        </blockquote>
       </section>
+      <blockquote>
+        <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
+        <p>Leonidas Esteban</p>
+      </blockquote>
       <hr />
       <section class="seccion conceptos">
         <h2>Conceptos esenciales del Desarrollo Web</h2>
-        <h3>Qué es HTML</h3>
+        <h3 id="html">Qué es HTML</h3>
         <p>
           Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el
           componente más básico de la web. Define el significado y la estructura
@@ -130,7 +130,7 @@ body&gt;
 /html&gt;
 </pre
         >
-        <h3>Etiquetas</h3>
+        <h3 id="etiquetas">Etiquetas</h3>
         <p>
           Las etiquetas HTML van a ayudarnos a brindar una estructura y
           semántica al contenido de nuestro website y cada una tiene
@@ -145,7 +145,7 @@ body&gt;
           vamos a usar las más importantes y que serán parte de tu día a día
           como Software Developer.
         </p>
-        <h3>DOM</h3>
+        <h3 id="dom">DOM</h3>
         <p>
           El Document Object Model es una estructura de árbol que representará
           todos nuestros proyectos web como si un árbol genealógico fuera:
@@ -158,7 +158,7 @@ body&gt;
           alt="Estructura de arbol de cualquier proyeto Web"
           title="Estructura de arbol de un proyecto Web"
         />
-        <h3>Sémantica</h3>
+        <h3 id="semantica">Sémantica</h3>
         <p>
           La semántica le brinda sentido a cada elemento existen en un sitio
           web, algunos elementos será meramente decorativos y no deben
@@ -170,7 +170,7 @@ body&gt;
           ayudará a la accesibilidad de tu sitio web, para que personas con
           habilidades diferentes puedan entender cada contenido.
         </p>
-        <h3>Atributos</h3>
+        <h3 id="atributos">Atributos</h3>
         <p>
           Los atributos le dan características extra a las etiquetas para
           complementar información y son pre programadas por el navegador,
@@ -178,7 +178,7 @@ body&gt;
           como ‘class’ pero otros atributos funcionan en solo alguna etiquetas
           como src
         </p>
-        <h3>CSS</h3>
+        <h3 id="css">CSS</h3>
         <p>
           Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS
           es el lenguaje de estilos utilizado para describir la presentación de
@@ -190,7 +190,7 @@ body&gt;
           title="Logo y estructura de una hona de estilos de CSS"
         />
       </section>
-      <section class="modeloDeCaja">
+      <section class="seccion modeloDeCaja">
         <h2>Modelo de caja</h2>
         <h3>El modelo de caja está compuesto por:</h3>
         <p>
