Padding (relleno) y cambiando los iconos de las herramientas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="#gitHub"><li>GitHub</li></a>
                 </ol>
               </details>
-              <details>
+              <details open>
                 <summary>Conceptos esenciales del Desarrollo Web</summary>
                 <ol>
                   <a href="#html"><li>Qué es HTML</li></a>
@@ -59,7 +59,7 @@
           <section class="seccion setup">
             <h2>Setup</h2>
             <img
-              src="./images/googleChrome.png"
+              src="./images/googleChrome.svg"
               alt="Logo del navegador Web Google Chromes"
               title="Logo de Google Chrome"
               id="googleChorme"
@@ -71,7 +71,7 @@
               avanzadas y de amigable uso.
             </p>
             <img
-              src="./images/vsCode.png"
+              src="./images/vsCode.svg"
               alt="Logo de editor de código Visual Studio Code"
               title="Logo de Visual Studio Code"
               id="vsc"
@@ -84,7 +84,7 @@
               programador sin importar el lenguaje en el que se desemvuelva.
             </p>
             <img
-              src="./images/figma.png"
+              src="./images/figma.svg"
               alt="Logo de Figma"
               title="Logo de Figma"
               id="figma"
@@ -97,7 +97,7 @@
               navegador.
             </p>
             <img
-              src="./images/gitHub.png"
+              src="./images/gitHub.svg"
               alt="Logo de GitHub"
               title="Logo de GitHub"
               id="gitHub"
