Slider con html y css

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
               title="Logo y estructura de una hona de estilos de CSS"
             />
           </section>
+
           <section class="seccion modeloDeCaja">
             <h2>Modelo de caja</h2>
             <h3>El modelo de caja está compuesto por:</h3>
@@ -245,7 +246,51 @@
                 padding-block-end | padding-inline-start | padding-inline-end
               </li>
             </ul>
-            <h3>Modelo de caja</h3>
+          </section>
+          <section class="seccion">
+            <h2>Intro de nuestro canal</h2>
+            <div class="slider">
+              <scroll-contaiter class="slider-container">
+                <scroll-page class="slider-slide" id="video-1">
+                  <iframe
+                    class="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/fdwZTif0nQE"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </scroll-page>
+                <scroll-page class="slider-slide" id="video-2">
+                  <iframe
+                    class="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/fdwZTif0nQE"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </scroll-page>
+                <scroll-page class="slider-slide" id="video-3">
+                  <iframe
+                    class="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/fdwZTif0nQE"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </scroll-page>
+              </scroll-contaiter>
+              <div class="slider-bullet-list">
+                <a href="#video-1" class="slider-bullet"></a>
+                <a href="#video-2" class="slider-bullet"></a>
+                <a href="#video-3" class="slider-bullet"></a>
+              </div>
+            </div>
           </section>
           <p>
             Si tienes alguna duda puedes escribirme a
