--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
             Si tienes alguna duda puedes escribirme a
             <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
           </p>
+          <section class="seccion">
+            <h2>Suscríbete a nuestro newsletter</h2>
+            <form action="#" class="form">
+              <input type="text" required placeholder="Nombre" />
+              <input type="email" required placeholder="Correco electrónico" />
+              <input type="submit" value="Suscribirme" />
+            </form>
+          </section>
         </div>
       </div>
     </main>
