Media queries y responsive design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="#gitHub"><li>GitHub</li></a>
                 </ol>
               </details>
-              <details open>
+              <details>
                 <summary>Conceptos esenciales del Desarrollo Web</summary>
                 <ol>
                   <a href="#html"><li>Qué es HTML</li></a>
