La herramienta de facebook Open Graph

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
+    <meta property="og:title" content="Esencial de Html y Css" />
+    <meta
+      property="og:description"
+      content="Lo que un FrontEnd debería de saber para ser un buen profesional"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://ronmeneses.github.io/esencial-html-css/"
+    />
+    <meta
+      property="og:image"
+      content="https://ronmeneses.github.io/esencial-html-css/images/dom.png"
+    />
   </head>
   <body>
     <div class="place"></div>
