Slider con html y css

--- a/index.html
+++ b/index.html
@@ -256,6 +256,55 @@
               </ul>
               <h3>Modelo de caja</h3>
             </section>
+
+            <section>
+              <div class="slider">
+                <scroll-container class="slider-container">
+                  <scroll-page class="slider-slide" id="video-1">
+                    <iframe
+                      class="video"
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </scroll-page>
+                  <scroll-page class="slider-slide" id="video-2">
+                    <iframe
+                      class="video"
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </scroll-page>
+                  <scroll-page class="slider-slide" id="video-3">
+                    <iframe
+                      class="video"
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </scroll-page>
+                </scroll-container>
+                <div class="slider-bullet-list">
+                  <a href="#video-1" class="slider-bullet"></a>
+                  <a href="#video-2" class="slider-bullet"></a>
+                  <a href="#video-3" class="slider-bullet"></a>
+                </div>
+              </div>
+            </section>
+
+            <section>
+              <h3>Suscríbete a nuestro newsletter</h3>
+            </section>
             <p>
               Si tienes alguna duda puedes escribirme a
               <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
