Rama form utilizando comando stash branch

--- a/index.html
+++ b/index.html
@@ -304,6 +304,11 @@
 
             <section>
               <h3>Suscríbete a nuestro newsletter</h3>
+              <form action="#" class="form">
+                <input type="text" placeholder="Nombre" required />
+                <input type="email" placeholder="Correo electrónico" required />
+                <input type="submit" value="Suscribirme" />
+              </form>
             </section>
             <p>
               Si tienes alguna duda puedes escribirme a
