Form inline terminado

--- a/index.html
+++ b/index.html
@@ -302,18 +302,19 @@
               </div>
             </section>
 
-            <section>
+            <p>
+              Si tienes alguna duda puedes escribirme a
+              <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
+            </p>
+
+            <section class="form">
               <h3>Suscríbete a nuestro newsletter</h3>
-              <form action="#" class="form">
+              <form action="#">
                 <input type="text" placeholder="Nombre" required />
                 <input type="email" placeholder="Correo electrónico" required />
                 <input type="submit" value="Suscribirme" />
               </form>
             </section>
-            <p>
-              Si tienes alguna duda puedes escribirme a
-              <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
-            </p>
           </main>
         </div>
       </div>
