Seccion de Footer con cherry-pick

--- a/index.html
+++ b/index.html
@@ -394,7 +394,31 @@
           </section>
         </div>
       </div>
-    </main>
+    </div>
+    <footer>
+      <h2>© Leonidas Esteban 2021</h2>
+      <a href="#">
+        <img
+          src="./images/instagram.png"
+          alt="Logo de instagram"
+          title="Link a la cuenta de instagram"
+        />
+      </a>
+      <a href="#">
+        <img
+          src="./images/facebook.png"
+          alt="Logo de facebook"
+          title="Link a la cuenta de facebook"
+        />
+      </a>
+      <a href="#">
+        <img
+          src="./images/twitter.png"
+          alt="Logo de twitter"
+          title="Link a la cuenta de twitter"
+        />
+      </a>
+    </footer>
 
     <script>
       const $detailsList = document.querySelectorAll("details");
